[gd_scene load_steps=2 format=3 uid="uid://b03wakwt83oeg"]

[ext_resource type="Script" path="res://scripts/gui/game_paused.gd" id="1_sdx3a"]

[node name="GamePaused" type="Control"]
z_index = 102
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -170.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sdx3a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.993
anchor_bottom = 1.0
offset_right = 0.0499878
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit to Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit to Main Menu"

[node name="Exit Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit to Main Menu" to="." method="_on_exit_to_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
